--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@
             </div>
     </div>
     </div>
-    <div class="container-fluid fw-bolder text-center p-5 p-lg-4"> &copy;Farhan Fardid -2023 All Rights Reserved. </div>
+    <div class="container-fluid fw-bolder text-center p-5 p-lg-4"> &copy;Akhilesh - 2024 All Rights Reserved. </div>
     
 
 </footer>
